<resources>
    <string name="profile">Profile</string>
    <string name="f_name">First name</string>
    <string name="l_name">Last name</string>
    <string name="study_program">Study program</string>
    <string name="save_profile">Save profile</string>
    <string name="iu_name">Your Progress Tracker</string>
    <string name="email">E-Mail</string>
    <string name="my_courses">My courses</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="semester">Semester</string>
    <string name="create_course">Create course</string>
    <string name="name_dp">Name: %s</string>
    <string name="study_program_dp">Study program: %s</string>
    <string name="string_placeholder">%s</string>
    <string name="my_learning_units">My learning units</string>
    <string name="semester_dp">%d. Semester</string>
    <string name="planned">Planned learning effort</string>
    <string name="learning_effort_time_dp">%dh %02dm learning effort</string>
    <string name="learning_effort">Learning effort</string>
    <string name="colon">:</string>
    <string name="hours">hours</string>
    <string name="create_learning_unit">Create learning unit</string>
    <string name="my_learning_efforts">My learning efforts</string>
    <string name="timestamp">Timestamp</string>
    <string name="change_date">Change date</string>
    <string name="change_time">Change time</string>
    <string name="add_learning_effort">Add learning effort</string>
    <string name="current_dp">So far: %dh %02dm</string>
    <string name="planned_dp">Planned:  %dh %02dm</string>
    <string name="date_time_dp">EEEE, MMMM d, yyyy \'at\' K:mm a</string>
    <string name="start_timer">Start</string>
    <string name="stop_timer">Stop</string>
    <string name="reset_timer">Reset</string>
    <string name="backButton">Back</string>
    <string name="deleteButton">Delete</string>
    <string name="changeButton">Change</string>
    <string name="stopwatchButton">Stopwatch</string>
    <string name="create_new_profile">Create new profile</string>
    <string name="welcome_message">Welcome to \nSynchro Learn!</string>
    <string name="welcome_message_create_profile">Please create a new profile to proceed</string>
    <string name="toast_error_edittexts_empty">Please fill out all fields!</string>
    <string name="toast_new_profile">Profile has been successfully created</string>
    <string name="toast_edit_profile">Profile has been successfully updated</string>
    <string name="toast_new_course">Course has been successfully created</string>
    <string name="toast_edit_course">Course has been successfully updated</string>
    <string name="create_profile">Create profile</string>
    <string name="save_course">Save course</string>
    <string name="save_learning_unit">Save learning unit</string>
    <string name="save_learning_effort">Save learning effort</string>
    <string name="description_dp">Description: %s</string>
    <string name="course_dp">Course: %s</string>
    <string name="learning_unit_dp">Learning unit: %s</string>
    <string name="toast_course_deleted">Course has been successfully deleted!</string>
    <string name="toast_learning_unit_deleted">Learning unit has been successfully deleted!</string>
    <string name="toast_learning_effort_deleted">Learning effort has been successfully deleted!</string>
    <string name="toast_new_learning_unit">Learning unit has been successfully created!</string>
    <string name="toast_edit_learning_unit">Learning unit has been successfully updated!</string>
    <string name="toast_new_learning_effort">Learning effort has been added successfully!</string>
    <string name="toast_edit_learning_effort">Learning effort has been successfully updated!</string>
    <string name="sort_item_date_asc">Creation date (Ascending)</string>
    <string name="sort_item_title_asc">Title (Ascending)</string>
    <string name="sort_item_semester_asc">Semester (Ascending)</string>
    <string name="sort_item_date_desc">Creation date (Descending)</string>
    <string name="sort_item_title_desc">Title (Descending)</string>
    <string name="sort_item_semester_desc">Semester (Descending)</string>
    <string name="sort_by">Sort by</string>
    <string name="learning_effort_planned">Planned learning effort</string>
    <string name="sdf_standard_format_date">yyyy-MM-dd HH:mm:ss</string>
    <string name="sdf_date_format">EEEE, MMMM d, yyyy</string>
    <string name="sdf_time_format">K:mm a</string>
    <string name="date_dp">Date: %s</string>
    <string name="time_dp">Time: %s</string>
    <string name="continue_timer">Continue</string>
    <string name="toast_error_stopwatch_running">Stopwatch is still running!</string>
    <string name="toast_error_stopwatch_empty">Stopwatch hasn\'t started yet</string>
    <string name="toast_stopwatch_started">Stopwatch started!</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_deletion_title">Confirm deletion</string>
    <string name="alert_dialog_deletion_question_course">Do you really want to delete this course?\n\nTitle: %s</string>
    <string name="alert_dialog_deletion_question_learning_unit">Do you really want to delete this learning unit?\n\nTitle: %s</string>
    <string name="alert_dialog_deletion_question_learning_effort">Do you really want to delete this learning effort?</string>
    <string name="next_content_description">Next</string>
    <string name="logo_content_description">Logo</string>
</resources>