<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/newEditLearningEffortConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:scrollbars="vertical"
    tools:context=".ui.NewEditLearningEffort">

    <ImageButton
        android:id="@+id/deleteLearningEffortButton"
        style="@style/StandardButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/deleteButton"
        android:onClick="deleteLearningEffortButtonClicked"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarInclude"
        app:srcCompat="@drawable/trashcan_android" />

    <ImageButton
        android:id="@+id/newEditLearningEffortBackButton"
        style="@style/StandardButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/backButton"
        android:onClick="backButtonClicked"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarInclude"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <NumberPicker
        android:id="@+id/learningEffortActualMinutesNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/CustomTextSize"
        app:layout_constraintStart_toEndOf="@+id/colonTextView"
        app:layout_constraintTop_toBottomOf="@+id/learningEffortTextView" />

    <TextView
        android:id="@+id/learningEffortHoursTextView"
        style="@style/CustomTextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_selected"
        android:layout_marginStart="5dp"
        android:text="@string/hours"
        app:layout_constraintBottom_toTopOf="@+id/learningEffortActualMinutesNumberPicker"
        app:layout_constraintStart_toEndOf="@+id/learningEffortActualMinutesNumberPicker"
        app:layout_constraintTop_toBottomOf="@+id/learningEffortActualHoursNumberPicker" />

    <NumberPicker
        android:id="@+id/learningEffortActualHoursNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:theme="@style/CustomTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learningEffortTextView" />

    <TextView
        android:id="@+id/learningEffortTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/black_selected"
        android:layout_marginTop="10dp"
        android:text="@string/learning_effort"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeDateButton" />

    <Button
        android:id="@+id/changeTimeButton"
        style="@style/StandardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/change_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/changeDateButton"
        app:layout_constraintTop_toBottomOf="@+id/selectedTimeTextView" />

    <Button
        android:id="@+id/changeDateButton"
        style="@style/StandardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/green"
        android:text="@string/change_date"
        app:layout_constraintEnd_toStartOf="@+id/changeTimeButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedTimeTextView" />

    <TextView
        android:id="@+id/colonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:textSize="40sp"
        android:textColor="@color/black_selected"
        app:layout_constraintBottom_toBottomOf="@+id/learningEffortActualHoursNumberPicker"
        app:layout_constraintStart_toEndOf="@+id/learningEffortActualHoursNumberPicker"
        app:layout_constraintTop_toTopOf="@+id/learningEffortActualMinutesNumberPicker" />

    <include
        android:id="@+id/toolbarInclude"
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timestampTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_selected"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/timestamp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newEditLearningEffortBackButton" />

    <Button
        android:id="@+id/newEditLearningEffortButton"
        style="@style/StandardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="saveLearningEffortButtonClicked"
        android:text="@string/add_learning_effort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learningEffortActualMinutesNumberPicker" />

    <TextView
        android:id="@+id/selectedDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/black_selected"
        android:layout_marginTop="10dp"
        android:text="@string/date_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timestampTextView" />

    <TextView
        android:id="@+id/selectedTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/black_selected"
        android:layout_marginTop="10dp"
        android:text="@string/time_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedDateTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>