<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/learningUnitDetailsConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".LearningUnitDetails">

    <ImageButton
        android:id="@+id/stopwatchImageButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_button"
        android:clickable="true"
        android:contentDescription="@string/stopwatchButton"
        android:focusable="true"
        android:onClick="newLearningEffortStopwatchButtonClicked"
        android:padding="12dp"
        android:scaleType="fitCenter"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/createLearningEffortImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="30dp"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/learningUnitDetailsBackButton"
        style="@style/StandardButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/green"
        android:contentDescription="@string/backButton"
        android:onClick="backButtonClicked"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarInclude"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ImageButton
        android:id="@+id/deleteLearningUnit"
        style="@style/StandardButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@color/red"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/deleteButton"
        android:onClick="deleteLearningUnitButtonClicked"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarInclude"
        app:srcCompat="@drawable/trashcan_android" />

    <include
        android:id="@+id/toolbarInclude"
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-202dp" />

    <TextView
        android:id="@+id/learningEffortPlannedTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:textColor="@color/black_selected"
        android:maxLines="1"
        android:text="@string/planned_dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/stopwatchImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learningUnitTitleTextView" />

    <TextView
        android:id="@+id/learningEffortCurrentTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:textColor="@color/black_selected"
        android:maxLines="1"
        android:text="@string/current_dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/createLearningEffortImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learningEffortPlannedTextView" />

    <TextView
        android:id="@+id/learningUnitTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black_selected"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/string_placeholder"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learningUnitDetailsBackButton" />

    <ImageButton
        android:id="@+id/changeLearningUnitButton"
        style="@style/StandardButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@color/green"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/changeButton"
        android:onClick="changeLearningUnitButtonClicked"
        app:layout_constraintEnd_toStartOf="@+id/deleteLearningUnit"
        app:layout_constraintTop_toBottomOf="@+id/toolbarInclude"
        app:srcCompat="@drawable/edit_icon"
        android:scaleType="centerInside" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/learningUnitDetailsBottomConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/standard_background"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarInclude">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/learningUnitDetailsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/standard_background"
            android:overScrollMode="always"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:listitem="@layout/item_learning_effort" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/myLearningEffortsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:textColor="@color/black_selected"
        android:layout_marginBottom="5dp"
        android:text="@string/my_learning_efforts"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/learningUnitDetailsBottomConstraintLayout"
        app:layout_constraintEnd_toStartOf="@+id/stopwatchImageButton"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/createLearningEffortImageButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round_button"
        android:clickable="true"

        android:contentDescription="@string/create_course"
        android:focusable="true"
        android:onClick="addLearningEffortButtonClicked"
        android:scaleType="center"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/learningUnitDetailsBottomConstraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="30dp"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>