<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/courseListConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".CourseDetails">

    <ImageButton
        android:id="@+id/courseDetailsBackButton"
        style="@style/StandardButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:background="@color/green"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/backButton"
        android:onClick="backButtonClicked"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarInclude"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ImageButton
        android:id="@+id/deleteCourseButton"
        style="@style/StandardButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/red"
        android:contentDescription="@string/deleteButton"
        android:onClick="deleteCourseButtonClicked"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarInclude"
        app:srcCompat="@drawable/trashcan_android" />

    <include
        android:id="@+id/toolbarInclude"
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-202dp" />

    <TextView
        android:id="@+id/courseDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:textColor="#000000"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/description_dp"
        android:textSize="16sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/createLearningUnitImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseTitleTextView" />

    <TextView
        android:id="@+id/courseTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/black_selected"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/string_placeholder"
        android:textSize="18sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/courseSemesterTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseDetailsBackButton" />

    <TextView
        android:id="@+id/courseSemesterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="#000000"
        android:text="@string/semester_dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeCourseButton" />

    <ImageButton
        android:id="@+id/changeCourseButton"
        style="@style/StandardButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@color/green"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/changeButton"
        android:onClick="changeCourseButtonClicked"
        app:layout_constraintEnd_toStartOf="@+id/deleteCourseButton"
        app:layout_constraintTop_toBottomOf="@+id/toolbarInclude"
        app:srcCompat="@drawable/edit_icon"
        android:scaleType="centerInside" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/courseDetailsBottomConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/standard_background"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarInclude">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/courseDetailsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/standard_background"
            android:overScrollMode="always"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:listitem="@layout/item_learning_unit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/myLearningUnitsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/my_learning_units"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/courseDetailsBottomConstraintLayout"
        app:layout_constraintEnd_toStartOf="@+id/createLearningUnitImageButton"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/createLearningUnitImageButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round_button"
        android:clickable="true"
        android:contentDescription="@string/create_course"
        android:focusable="true"
        android:onClick="addLearningUnitButtonClicked"
        android:scaleType="center"
        app:backgroundTint="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/courseDetailsBottomConstraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="30dp"
        app:srcCompat="@android:drawable/ic_input_add"
        app:tint="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>